back to shop width issue on mobile

--- a/wp-content/themes/known_starter/src/sass/partials/_woocommerce.scss
+++ b/wp-content/themes/known_starter/src/sass/partials/_woocommerce.scss
@@ -255,13 +255,16 @@
 .woocommerce .woocommerce-breadcrumb {
   text-align: center;
   padding: 3rem 2rem;
-  margin: 0 -3rem;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 1.2rem;
   letter-spacing: .1rem;
   border-bottom: .1rem solid #eee;
   border-top: .1rem solid #eee;
+
+  @media screen and (min-width: 768px){
+    margin: 0 -3rem;
+  }
 
   a{
     &:hover {
